Fix scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,6 @@ video {
 }
 
 .app {
-  width: 100vw;
   min-height: 100vh;
   background-color: white;
   overflow: hidden;
